--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sinon": "^17.0.1"
   },
   "dependencies": {
-    "chai": "^4.3.1"
+    "chai": "^4.3.1",
+    "chai-spies": "^1.1.0"
   }
 }
